# Data_Driven_Engineering

./: .gitignore  README.md  data_loader.py  pyproject.toml  write_to_db.py
api_example/: README.md  api_reader.py
etl/: load.py  transform.py
notebooks/: EDA.ipynb
